<resources>
    <string name="app_name">Beer Counter</string>
    <string name="beers">Beers:</string>
    <string name="add_beer">Add Beer</string>
    <string name="third">330</string>
    <string name="half">500</string>
    <string name="liter">1L</string>
    <string name="end_session">End Session</string>
    <string name="liters">Liters:</string>
    <string name="all_beers">All beers</string>
    <string name="average_beers">Average beers per session</string>
    <string name="all_liters">All liters</string>
    <string name="average_liters">Average liters per session</string>
    <string name="statistic">Statistic</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="beer_notification_channel_id" translatable="false">beer_channel</string>
    <string name="beer_notification_channel_name" translatable="false">Beer</string>
    <string name="notification_title">Beer Counter</string>
    <string name="notification_text">Did you drink your beer?</string>
</resources>