<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_baseline_analytics_24"
        android:orderInCategory="1"
        android:title="@string/statistic" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="2"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_baseline_calendar_view_month_24"
        android:orderInCategory="3"
        android:title="@string/calendar"
        app:showAsAction="always" />
</menu>