<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.beercounter.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <androidx.constraintlayout.motion.widget.MotionLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layoutDescription="@xml/fragment_home_scene">-->

        <ImageView
            android:id="@+id/beer_image"
            android:layout_width="156dp"
            android:layout_height="164dp"
            app:layout_constraintBottom_toTopOf="@+id/beers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_sports_bar_24"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/check"
            android:layout_width="156dp"
            android:layout_height="164dp"
            app:layout_constraintBottom_toTopOf="@+id/beers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avd_done"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/beers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/beers"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/beer_count"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/beer_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/beers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beers"
            app:layout_constraintTop_toTopOf="@+id/beers"
            app:beerCount="@{viewModel.beers}"
            tools:text="8" />

        <Button
            android:id="@+id/add_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{() -> viewModel.onAddBeerClicked()}"
            android:text="@string/add_beer"
            app:layout_constraintEnd_toStartOf="@+id/end_session"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liters_label"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/end_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onEndSessionClicked()}"
            android:text="@string/end_session"
            android:enabled="@{viewModel.endSessionVisible}"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintBottom_toBottomOf="@+id/add_beer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/add_beer"
            app:layout_constraintTop_toTopOf="@+id/add_beer" />

        <TextView
            android:id="@+id/liters_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/liters"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/liters"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beers" />

        <TextView
            android:id="@+id/liters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="24sp"
            app:liters="@{viewModel.liters}"
            app:layout_constraintBottom_toBottomOf="@+id/liters_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/liters_label"
            app:layout_constraintTop_toTopOf="@+id/liters_label"
            tools:text="3.330" />
<!--        </androidx.constraintlayout.motion.widget.MotionLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>